src/test/resources/extension/invalid/typeInference/deduceFromPairParam.awsl
begin

pair f(pair x) is
    int c = fst x;
    println c;
    return null;
end

pair(int, int) p = newpair(1, 3);
p = f(p);

end